objects/ASI_CRM_JP_Sales_Order_History_Detail__c.object
<CustomObject>
    <description>For JPCRM3</description>
    <fields>
        <fullName>ASI_CRM_AP_Code__c</fullName>
        <label>A&amp;P Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Extended_Price__c</fullName>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Sales_Order_History__c</fullName>
        <label>Sales Order History (JP)</label>
        <referenceTo>ASI_CRM_JP_Sales_Order_History__c</referenceTo>
        <relationshipLabel>Sales Order History Details</relationshipLabel>
        <relationshipName>Sales_Order_History_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MFM_PO_No__c</fullName>
        <label>MFM PO No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Quantity_Cancelled__c</fullName>
        <label>Quantity Cancelled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Sales Order History Details</relationshipLabel>
        <relationshipName>Sales_Order_History_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Item_Availability_Filter__c</fullName>
        <label>Sys Item Availability Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_UOM__c</fullName>
        <label>UOM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Order History Detail</label>
    <nameField>
        <displayFormat>SOHD-{000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order History Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>